# OperatingSyst

./: README.md
lab1/: CMakeLists.txt  creator.cpp  main.cpp  reporter.cpp
lab2/: CMakeLists.txt  lab2.cpp  test.cpp
Сolloquium3/: README.md
сolloquium/: CMakeLists.txt  fibonacci.h  list.cpp  list.h  main.cpp  palindrome.cpp  palindrome.h  test.cpp
